--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,18 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="action_refresh">Refresh</string>
+    <string name="title_activity_detail">DetailActivity</string>
+    <string name="title_activity_settings">Settings</string>
+    <string name="pref_location_label">Location</string>
+    <string name="pref_location_key">location</string>
+    <string name="pref_location_default">94043</string>
+    <string name="pref_temp_label">Temperature</string>
+    <string name="pref_temp_key">temperature</string>
+    <string name="pref_temp_default">metric</string>
+    <string name="pref_temp_label_metric">Metric</string>
+    <string name="pref_temp_label_imperial">Imperial</string>
+    <string name="pref_temp_metric">metric</string>
+    <string name="pref_temp_imperial">imperial</string>
+    <string name="action_map_label">Map</string>
+    <string name="action_share">Share</string>
 </resources>
